--- a/Spam_Ham__Filter.ipynb
+++ b/Spam_Ham__Filter.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1_niU065IUU4pZ14R91XKIvkVNMIYdwkN",
-      "authorship_tag": "ABX9TyOhuod0nLaFyQdWs26amz5l",
+      "authorship_tag": "ABX9TyO8RBM+P0MesO7Ay5lYJtDj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,15 +33,20 @@
         "# ***Importing Libraries :***\n",
         "Python libraries make it very easy for us to handle the data and perform typical and complex tasks with a single line of code.\n",
         "\n",
-        "Pandas >>> This library helps to load the data frame in a 2D array format and has multiple functions to perform analysis tasks in one go.\n",
+        "Seaborn/Wordcloud >>> This library is used to draw visualizations.\n",
         "\n",
-        "Numpy >>> Numpy arrays are very fast and can perform large computations in a very short time.\n",
+        "NLTK >>> Natural Language Tool Kit provides various functions to process the raw textual data.\n",
         "\n",
+        "TensorFlow : works like a computational library for writing new algorithms that involve a large number of tensor operations, since neural networks can be easily expressed as computational graphs they can be implemented using TensorFlow as a series of operations on Tensors. Plus, tensors are N-dimensional matrices which represent your data.\n",
         "\n",
-        "Matplotlib/Seaborn/Wordcloud >>> This library is used to draw visualizations.\n",
+        "Numphy-This interface can be utilized for expressing images, sound waves, and other binary raw streams as an array of real numbers in N-dimensional.\n",
+        "Keras: It provides an easier mechanism to express neural networks. Keras also provides some of the best utilities for compiling models, processing data-sets, visualization of graphs, and much more.\n",
         "\n",
+        "Pandas: Pandas make sure that the entire process of manipulating data will be easier. Support for operations such as Re-indexing, Iteration, Sorting, Aggregations, Concatenations and Visualizations are among the feature highlights of Pandas.\n",
         "\n",
-        "NLTK >>> Natural Language Tool Kit provides various functions to process the raw textual data."
+        "NuPIC: The NuPIC library facilitates the development of smart applications with the ability to recognize trends over time and extrapolate future outcomes from real-time data.\n",
+        "\n",
+        "Matplotlib is a library for Python that has everything you need to make static, animated, and interactive visualizations.\n"
       ],
       "metadata": {
         "id": "3AhCZzkRKizt"
